--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.firebase:firebase-firestore:21.4.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
+
     implementation 'com.google.firebase:firebase-functions:20.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -97,7 +98,12 @@ dependencies {
 
     // for circular imageview
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //noinspection GradleCompatible
+    api "com.android.support:appcompat-v7:28.0.0"
+    //noinspection GradleCompatible
+    implementation "com.android.support:exifinterface:28.0.0"
 
+    implementation "androidx.activity:activity-ktx:1.2.3"
 }
 
 kapt {
