--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,12 +98,10 @@ dependencies {
 
     // for circular imageview
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    //noinspection GradleCompatible
-    api "com.android.support:appcompat-v7:28.0.0"
-    //noinspection GradleCompatible
-    implementation "com.android.support:exifinterface:28.0.0"
 
     implementation "androidx.activity:activity-ktx:1.2.3"
+    implementation 'com.github.CanHub:Android-Image-Cropper:3.1.3'
+
 }
 
 kapt {
